[package]
name = "store"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "store"
path = "src/bin/main.rs"

[dependencies]
aes = "0.8"
byteorder = "1.4"
clap = "3.1"
env_logger = "0.6"
fxhash = "0.2"
hmac = "0.12"
log = "0.4"
rand = "0.8"
rustls-pemfile = "0.2"
sha2 = "0.10"
tokio = { version = "1.18", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = "0.23"
