[package]
name = "store-nbd-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4"
env_logger = "0.6"
lazy_static = "1.2.0"
libc = "0.2"
log = "0.4"
nbdkit = "0.2.0"
store = { version = "0.1", path = ".." }
tokio = { version = "1.18", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
